# todoapp

./: .env.sample  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
docker/: .dockerignore  Dockerfile
k8s/: kustomization.yaml  namespace.yaml
k8s/mongodb/: deployment.yaml
k8s/todoapp/: deployment.yaml  istio.yaml
src/todoapp/: api.py  database.py  logging_settings.py  main.py
src/todoapp/config/: core.py
src/todoapp/schemas/: __init__.py  health.py
src/todoapp/templates/: index.html
tests/: conftest.py  test_api.py
