[tool.poetry]
name = "todoapp"
version = "0.0.1"
description = "Todo-App using FastAPI & MongoDB following best practices."
authors = ["havocds"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
fastapi = ">=0.104.1"
starlette = ">=0.27.0"
uvicorn = ">=0.23.2"
motor = ">=3.3.1"
prometheus-fastapi-instrumentator = ">=6.1.0"
strictyaml = ">=1.7.3"
loguru  = ">=0.7.2"
pydantic = ">=2.3.0"
pydantic-settings = ">=2.1.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.3"
httpx = ">=0.26.0"
coverage = "^7.3.4"
tox = "^4.11.4"

[tool.poetry.group.checks.dependencies]
#flake8  = ">=6.1.0"
mypy = ">=1.6.1"
#black = ">=23.10.1"
isort = ">= 5.13.2"
ruff = ">=0.1.8"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.isort]
profile = "black"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__init__.py",
]

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    #"I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # complexity
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Same as Black.
line-length = 100
indent-width = 4

target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.pytest]
log_cli_level="WARNING"

[tool.poetry.scripts]
start = "bin.run:main"


[tool.coverage.run]
branch = true
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 70
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "htmlcov"
